[package]
name = "OrcWars"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14" # make sure this is the latest version
bevy-inspector-egui = "0.25.2"
bevy_pancam = "0.13.0"
noise = "0.9.0"
rand = "0.8.5"
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
